objects/Related_Contracts__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <description>This is the association to the Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Related_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Reference__c</fullName>
        <description>This is the relationship to the individual contract reference record</description>
        <label>Contract Reference</label>
        <referenceTo>Contract_Reference__c</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Related_Contracts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <formula>IF(isnull(Case__r.Date_Sent_to_Sales__c) , Case__r.Date_Sent_to_Customer__c, IF( isnull(Case__r.Date_Sent_to_Customer__c), Case__r.Date_Sent_to_Sales__c, IF(Case__r.Date_Sent_to_Sales__c&lt;Case__r.Date_Sent_to_Customer__c,Case__r.Date_Sent_to_Sales__c,Case__r.Date_Sent_to_Customer__c)))</formula>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Period__c</fullName>
        <formula>IF( OR(Contract_Reference__r.Region__c = &quot;Asia Pacific&quot;,
CONTAINS( $Label.CO_LP_Country60 , Contract_Reference__r.Country__c),
(Route_to_Market__c = &quot;Direct&quot; &amp;&amp;
OR( CONTAINS( $Label.CO_LP_SO , Contract_Reference__r.Sales_Organization__c),
CONTAINS( $Label.CO_LP_CountryUKI , Contract_Reference__r.Country__c)
))), 60,

IF( Route_to_Market__c = &quot;Indirect&quot; &amp;&amp;
CONTAINS( $Label.CO_LP_CountryUKI , Contract_Reference__r.Country__c), 120,

90))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quoted_on_Time__c</fullName>
        <formula>IF((ISBLANK(Case__r.Date_Sent_to_Customer__c) &amp;&amp; (ISBLANK(Case__r.Date_Sent_to_Sales__c))), &quot; &quot;, 
IF( CONTAINS( $Label.CO_BG_Set1 ,TEXT(Case__r.BG__c)) &amp;&amp; ((Contract_Reference__r.Contract_End_date__c - Date_Sent__c) &gt;= Legal_Period__c) , &quot;True &quot;, 
IF(CONTAINS( $Label.CO_BG_Set2 ,TEXT(Case__r.BG__c)) &amp;&amp; ((Contract_Reference__r.Contract_End_date__c - Case__r.Date_Sent_to_Sales__c) &gt;= 120) || 
((Contract_Reference__r.Contract_End_date__c - Case__r.Date_Sent_to_Customer__c) &gt;= 90 ), &quot;True &quot;, 
&quot;False&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quoted on Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_to_Market__c</fullName>
        <formula>CASE( Contract_Reference__r.Channel_Relationship_Code__c , 
&quot; &quot;, &quot;Direct&quot;, 
NULL, &quot;Direct&quot;, 
&quot;FMP&quot;, &quot;Direct&quot;, 
&quot;ODP&quot;, &quot;Direct&quot;, 
&quot;OME&quot;, &quot;Direct&quot;, 
&quot;OMI&quot;, &quot;Direct&quot;, 
&quot;OMP&quot;, &quot;Direct&quot;, 
&quot;X&quot;, &quot;Direct&quot;, 
&quot;Y&quot;, &quot;Direct&quot;, 
&quot;Z&quot;, &quot;Direct&quot;, 
&quot;Indirect&quot; )</formula>
        <label>Route to Market</label>
        <type>Text</type>
    </fields>
    <label>Related Contracts</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Related Contracts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>